fix syntax in java 21
Signed-off-by: xinyual <xinyual@amazon.com>